attempt to fix clickable area on ios by adding cursor styling

--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -27,6 +27,7 @@
     display: block;
 }
 .gallery-img-div {
+    cursor: pointer;
     flex: none;
     margin: 20px;
     overflow: hidden;
